# CursoCPP

./: LICENSE  README.md  comando cmake  criacaoMultiplosArquivos.txt
Aula-extra1/: comandoCmake
Aula-extra1/calc-base/: CMakeLists.txt
Aula-extra1/calc-base/cmake/: bkpconan.cmake  project_options.cmake
Aula-extra1/calc-base/src/: CMakeLists.txt
Aula-extra1/calc-base/src/.cache/clangd/index/: expression.cpp.2BF80A427E150671.idx  expression.hpp.4E79BF4DE83675AC.idx  main.cpp.0A48FC429BE2B168.idx  main.cpp.1ACF7721A8302B5F.idx  operations.cpp.8EB96A3C28D8A9C3.idx  operations.hpp.847382551062D4FC.idx  parser.cpp.6683CBAE0B7EC660.idx  parser.hpp.B55C6E4C3B42C2FC.idx
Aula-extra1/calc-base/src/app/: CMakeLists.txt  main.cpp
Aula-extra1/calc-base/src/operations/: CMakeLists.txt  expression.hpp  operations.hpp
Aula-extra1/calc-base/src/operations/tests/: CMakeLists.txt  main (cópia).cpp  main.cpp
Aula-extra1/calc-base/src/parser/: CMakeLists.txt  parser.cpp  parser.hpp
Aula1/: anoNascimento.cpp  lacoForClassico.cpp  lacoForRangeFor.cpp  lacoWhile
Aula1/Exercicios/: even.cpp  fib.cpp  fizzbuzz.cpp  palindrome.cpp  palindrome2.cpp
Aula10/src/: CMakeLists.txt  vector.hpp  vector_test.cpp
Aula11/src/: main.cpp  vector.hpp  vector_test.cpp
Aula12/src/: vector (cópia).hpp  vector.hpp  vector_test.cpp
Aula12a/src/: CMakeLists.txt  linked_list.hpp  main.cpp  vector.hpp  vector_test.cpp
Aula2/: average_squares.cpp  const.cpp  exercio1aula2cpp  exercio2aula2.cpp  exercio2aula2cpp  exercio3aula2.cpp  exercio4aula2.cpp  exercio5aula2.cpp  fibo.cpp  is_palindrome.cpp  vector1.cpp  vector2.cpp  vector3.cpp  zero_all.cpp
Aula2/Exercicios/: exercio1aula2.cpp
Aula3/: main.cpp  vector2d.cpp  vector2d.hpp
Aula3/Exercicios/src/: CMakeLists.txt
Aula3/Exercicios/src/school/: CMakeLists.txt  functions.cpp
Aula4/src/: CMakeLists.txt  main.cpp
Aula4/src/school/: CMakeLists.txt  functions.hpp  student.cpp  student.hpp
Aula5/: cin.cpp  input.txt
Aula6/: inheritance.cpp
Aula7/: function_template.cpp
Aula7/src/: CMakeLists.txt  linked_list.hpp  main.cpp
Aula8/src/: CMakeLists.txt  fixed_length_vector.hpp  main.cpp
Aula9/: exc_example.cpp
Aula9/src/: fixed_length_vector.cpp  fixed_length_vector.hpp
